# power-meter

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
flake-parts/: bomper.nix  cargo.nix  ci.nix  pre-commit.nix  rust-toolchain.nix  shells.nix
nix/modules/: devshell.nix  rust.nix  template.nix
src/: core_loop.rs  database.rs  main.rs  meter_reading.rs  obis_code.rs
src/cli/: mod.rs  root_command.rs  start.rs
src/server/: gauge.rs  mod.rs  now.rs
