[package]
name = "power-meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
chrono = "0.4.39"
clap = { version = "4.5.3", features = ["derive", "unstable-doc"] }
clap_derive = "4.5.3"
crossbeam-utils = "0.8.19"
dirs = "5.0.1"
rumqttc = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serialport = "4.3.0"
sml-rs = "0.3.0"
sqlite = "0.34.0"
tokio = { version = "1.36.0", features = ["full"] }

env_logger = "0.11.3"
log = "0.4.21"
syslog = "6.1"
tokio-cron-scheduler = { version = "0.10" }
tokio-serial = "5.4.3"
tokio-stream = { version="0.1.11", features=["sync"] }



[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
